--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,7 @@ protobuf {
 }
 
 def canonicalVersionCode = 611
-def canonicalVersionName = "4.57.0"
+def canonicalVersionName = "4.57.0.0-JW"
 
 def postFixSize = 10
 def abiPostFix = ['universal'   : 0,
@@ -109,9 +109,10 @@ android {
         multiDexEnabled true
 
         vectorDrawables.useSupportLibrary = true
-        project.ext.set("archivesBaseName", "Signal");
+        project.ext.set("archivesBaseName", "Signal-Android"); // JW: change basename
 
-        buildConfigField "long", "BUILD_TIMESTAMP", getLastCommitTimestamp() + "L"
+        // JW: change back to old code that works without having Git in the path, timestamp is not used anyway
+        buildConfigField "long", "BUILD_TIMESTAMP", System.currentTimeMillis() + "L"
         buildConfigField "String", "SIGNAL_URL", "\"https://textsecure-service.whispersystems.org\""
         buildConfigField "String", "STORAGE_URL", "\"https://storage.signal.org\""
         buildConfigField "String", "SIGNAL_CDN_URL", "\"https://cdn.signal.org\""
@@ -252,6 +253,7 @@ android {
 }
 
 dependencies {
+    implementation 'net.lingala.zip4j:zip4j:2.4.0' // JW: added
     implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
@@ -418,6 +420,7 @@ task signProductionWebsiteRelease {
 }
 
 tasks.whenTaskAdded { task ->
+/* JW: Disable extra apk signing steps, does not work and Android Studio does the signing already anyway
     if (task.name.equals("assemblePlayRelease")) {
         task.finalizedBy signProductionPlayRelease
     }
@@ -425,6 +428,7 @@ tasks.whenTaskAdded { task ->
     if (task.name.equals("assembleWebsiteRelease")) {
         task.finalizedBy signProductionWebsiteRelease
     }
+*/
 }
 
 def getLastCommitTimestamp() {
