Added extra options
- Encrypted and plaintext backup / restore.
- Import SMS database. Removed apk expire.
- Choose between passphrase protection and the Android screenlock.
- More conversation colors.
- Choice for the backup location (internal or removable storage).
- Set the maptype in the place picker.
- Option to treat view-once media as normal media.
- Option to ignore remote deletion.
- Choose between FCM or websocket notification delivery.
- Option to delete only the media from a message, not the rest of the message.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ protobuf {
 }
 
 def canonicalVersionCode = 757
-def canonicalVersionName = "5.0.6"
+def canonicalVersionName = "5.0.6.0-JW"
 
 def postFixSize = 10
 def abiPostFix = ['universal'   : 0,
@@ -96,6 +96,7 @@ android {
     }
 
     defaultConfig {
+        // applicationId "org.thoughtcrime.securesms.jw" // JW: build test versions with different package name
         versionCode canonicalVersionCode * postFixSize
         versionName canonicalVersionName
 
@@ -105,9 +106,10 @@ android {
         multiDexEnabled true
 
         vectorDrawables.useSupportLibrary = true
-        project.ext.set("archivesBaseName", "Signal");
+        project.ext.set("archivesBaseName", "Signal-Android"); // JW: change basename
 
-        buildConfigField "long", "BUILD_TIMESTAMP", getLastCommitTimestamp() + "L"
+        // JW: change back to old code that works without having Git in the path and by downloading the source as zip, timestamp is not used anyway
+        buildConfigField "long", "BUILD_TIMESTAMP", System.currentTimeMillis() + "L"
         buildConfigField "String", "SIGNAL_URL", "\"https://textsecure-service.whispersystems.org\""
         buildConfigField "String", "STORAGE_URL", "\"https://storage.signal.org\""
         buildConfigField "String", "SIGNAL_CDN_URL", "\"https://cdn.signal.org\""
@@ -287,6 +289,7 @@ android {
 dependencies {
     lintChecks project(':lintchecks')
 
+    implementation 'net.lingala.zip4j:zip4j:2.6.4' // JW: added
     implementation ('androidx.appcompat:appcompat:1.2.0') {
         force = true
     }
