Deactivated standalone client for the moment because Recipient.self can not be imported from backup.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -223,7 +223,7 @@
     </activity>
 
     <activity-alias android:name=".RoutingActivity"
-                    android:targetActivity=".ImportWhatsappActivity"
+                    android:targetActivity=".MainActivity"
                     android:exported="true">
 
         <intent-filter>
